// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A snapshot of a populated cell 1`] = `
<View
  collapsable={false}
>
  <View
    style={
      [
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
      ]
    }
  >
    <View
      accessibilityRole="button"
      accessible={true}
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 22.034250207026385,
            "flexDirection": "row",
            "height": 71.30434368167384,
            "justifyContent": "center",
            "width": 71.30434368167384,
          },
          {
            "backgroundColor": "#fefefe",
            "borderColor": "#555",
            "borderWidth": 1.9868575479735244,
            "elevation": 0,
          },
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <Text
          style={
            {
              "color": "#555",
              "display": "flex",
              "fontSize": 35.65217184083692,
            }
          }
        >
          5
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <Text
          style={
            {
              "bottom": 13.617921633810537,
              "color": "#555",
              "display": "flex",
              "fontSize": 22.034250207026385,
              "left": 13.617921633810537,
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`A snapshot of an active cell 1`] = `
<View
  collapsable={false}
>
  <View
    style={
      [
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
      ]
    }
  >
    <View
      accessibilityRole="button"
      accessible={true}
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 22.034250207026385,
            "flexDirection": "row",
            "height": 71.30434368167384,
            "justifyContent": "center",
            "width": 71.30434368167384,
          },
          {
            "backgroundColor": "#4285f4",
            "borderColor": "black",
            "borderWidth": 1.9868575479735244,
            "elevation": 3.2147355126211625,
          },
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <Text
          style={
            {
              "color": "#fefefe",
              "display": "flex",
              "fontSize": 35.65217184083692,
            }
          }
        >
          5
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <Text
          style={
            {
              "bottom": 13.617921633810537,
              "color": "#fefefe",
              "display": "flex",
              "fontSize": 22.034250207026385,
              "left": 13.617921633810537,
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`A snapshot of an empty cell 1`] = `
<View
  accessible={false}
  style={
    {
      "alignItems": "center",
      "borderRadius": 22.034250207026385,
      "flexDirection": "row",
      "height": 71.30434368167384,
      "justifyContent": "center",
      "width": 71.30434368167384,
    }
  }
/>
`;

exports[`A snapshot of an inactive cell in Explore mode 1`] = `
<View
  collapsable={false}
>
  <View
    style={
      [
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
      ]
    }
  >
    <View
      accessibilityRole="button"
      accessible={true}
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 22.034250207026385,
            "flexDirection": "row",
            "height": 71.30434368167384,
            "justifyContent": "center",
            "width": 71.30434368167384,
          },
          {
            "backgroundColor": "#fefefe",
            "borderColor": "#555",
            "borderWidth": 1.9868575479735244,
            "elevation": 0,
          },
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <Text
          style={
            {
              "color": "#555",
              "display": "flex",
              "fontSize": 35.65217184083692,
            }
          }
        >
          5
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <Text
          style={
            {
              "bottom": 13.617921633810537,
              "color": "#555",
              "display": "flex",
              "fontSize": 22.034250207026385,
              "left": 13.617921633810537,
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`A snapshot of an inactive cell in Quiz mode 1`] = `
<View
  collapsable={false}
>
  <View
    style={
      [
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
      ]
    }
  >
    <View
      accessibilityRole="button"
      accessible={true}
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 22.034250207026385,
            "flexDirection": "row",
            "height": 71.30434368167384,
            "justifyContent": "center",
            "width": 71.30434368167384,
          },
          {
            "backgroundColor": "#fefefe",
            "borderColor": "#555",
            "borderWidth": 1.9868575479735244,
            "elevation": 0,
          },
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <Text
          style={
            {
              "color": "#555",
              "display": "none",
              "fontSize": 35.65217184083692,
            }
          }
        >
          5
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <Text
          style={
            {
              "bottom": 13.617921633810537,
              "color": "#555",
              "display": "none",
              "fontSize": 22.034250207026385,
              "left": 13.617921633810537,
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;
